--- a/Calculadora/Calculadora/Base.lproj/Main.storyboard
+++ b/Calculadora/Calculadora/Base.lproj/Main.storyboard
@@ -126,7 +126,7 @@
         <!--Image View Controller-->
         <scene sceneID="epi-jT-AxX">
             <objects>
-                <viewController storyboardIdentifier="imagenViewController" id="dO0-r4-VJZ" customClass="ImageViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="imagenViewController" id="dO0-r4-VJZ" customClass="ImageViewController" customModule="Calculadora" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vXe-OK-1w9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -140,6 +140,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Go Back"/>
+                                <connections>
+                                    <action selector="backButton:" destination="dO0-r4-VJZ" eventType="touchUpInside" id="NAk-dk-TfL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="96Z-2p-uGf"/>
@@ -148,7 +151,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FiL-bZ-ai3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913.04347826086962" y="-27.455357142857142"/>
+            <point key="canvasLocation" x="883" y="-27"/>
         </scene>
     </scenes>
     <resources>
